# simulation

./: Cargo.toml  build.rs  wrapper.h
examples/: cfd.rs
src/: SI.rs  algebra.rs  compose.rs  function.rs  lib.rs  main.rs  mesh.rs  view.rs
