[package]
name = "simulation"
version = "0.0.0"
authors = ["Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
edition = "2018"
links = "umfpack"

[build-dependencies]
bindgen = ""

[dependencies]
framework = { path = "framework", features = ["array_collect", "const_vector", "window", "sRGB"] } #"text"
